


..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.8?
============================
Release date: TBA

* Fix a crash when linting a file that passes an integer ``mode=`` to
  ``open``

  Closes #6414

* Avoid reporting ``superfluous-parens`` on expressions using the ``is not`` operator.

  Closes #5930


What's New in Pylint 2.13.7?
============================
Release date: 2022-04-20

* Fix a crash caused by using the new config from 2.14.0 in 2.13.x code.

  Closes #6408


What's New in Pylint 2.13.6?
============================
Release date: 2022-04-20

* Fix a crash in the ``unsupported-membership-test`` checker when assigning
  multiple constants to class attributes including ``__iter__`` via unpacking.

  Closes #6366

* Asterisks are no longer required in Sphinx and Google style parameter documentation
  for ``missing-param-doc`` and are parsed correctly.

  Closes #5815
  Closes #5406

* Fixed a false positive for ``unused-variable`` when a builtin specified in
  ``--additional-builtins`` is given a type annotation.

  Closes #6388

* Fixed an ``AstroidError`` in 2.13.0 raised by the ``duplicate-code`` checker with
  ``ignore-imports`` or ``ignore-signatures`` enabled.

  Closes #6301


What's New in Pylint 2.13.5?
============================
Release date: 2022-04-06

* Fix false positive regression in 2.13.0 for ``used-before-assignment`` for
  homonyms between variable assignments in try/except blocks and variables in
  subscripts in comprehensions.

  Closes #6069
  Closes #6136

* ``lru-cache-decorating-method`` has been renamed to ``cache-max-size-none`` and
  will only be emitted when ``maxsize`` is ``None``.

  Closes #6180

* Fix false positive for ``unused-import`` when disabling both ``used-before-assignment`` and ``undefined-variable``.

  Closes #6089

* Narrow the scope of the ``unnecessary-ellipsis`` checker to: